--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,10 +5,17 @@ add_executable(wave_tests
     wave_tests.cpp
 )
 
+target_include_directories(wave_tests
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
 target_link_libraries(wave_tests
     PRIVATE
         wave_core
         wave_cpp
+        GTest::gtest_main
+        GTest::gtest
 )
 
 # Register tests
